BSO wiki updates

--- a/docs/src/content/docs/bso/Custom Items/pets.mdx
+++ b/docs/src/content/docs/bso/Custom Items/pets.mdx
@@ -153,3 +153,23 @@ There are pets exclusive to BSO that provide unique and powerful perks and are r
 | [[Echo]]                   | None                                                                                         | Vladimir Drakan                                                                                  |
 | [[Noom]]                   | None                                                                                         | 1/300 from Celestara                                                                             |
 | [[Fungo]]                  | None                                                                                         | 1/50 per harvest                                                                                 |
+
+
+## Pets that get rarer (CL scaling)
+
+The following BSO pets have CL-based rarity scaling (`baseRate * clIncrease^owned`):
+
+- Doug: base 1/7000, x1.5 per copy
+- Takon: base 1/600, x1.5 per copy (tame base 1/4500)
+- Steve: base 1/300, x1.5 per copy (tame base 1/500)
+- Voidling: base 1/500, x1.5 per copy
+- Remy: base 1/5000, x1.5 per copy
+- Shelldon: base 1/8000, x1.5 per copy
+- Zak: base 1/3000, x1.4 per copy
+- Zippy (hunter): base 1/3500, x1.5 per copy
+- Scruffy: base 1/4000, x1.5 per copy
+- Sandy: base 1/6000, x1.5 per copy
+- Echo: base 1/1000, x1.5 per copy
+- Fungo: base 1/50, x1.5 per copy
+
+Use [[/droprate]] to see your personal adjusted rate from your CL count.
