--- a/docs/src/content/docs/bso/Monsters/index.mdx
+++ b/docs/src/content/docs/bso/Monsters/index.mdx
@@ -10,7 +10,7 @@ title: "Custom Monsters"
 - [Polypore Dungeon](polypore-dungeon)
 - [Rum Pumped Crab](#rum-pumped-crab)
 - [Tormented Demon](#tormented-demon)
-- [Vladimir Drakan](#vladidmir-drakan)
+- [Vladimir Drakan](./Demi Bosses/vladimir-drakan)
 - [Yeti](#yeti)
 
 ## Custom Monsters
@@ -137,7 +137,7 @@ Brackish blade - 1/1,200 - No major uses other than a CL item.
 	</tbody>
 </table>
 
-### Vladidmir Drakan
+### Vladimir Drakan
 
 #### Requiremets:
 
