--- a/docs/src/content/docs/bso/Custom Items/pets.mdx
+++ b/docs/src/content/docs/bso/Custom Items/pets.mdx
@@ -157,7 +157,7 @@ There are pets exclusive to BSO that provide unique and powerful perks and are r
 
 ## Pets that get rarer (CL scaling)
 
-The following BSO pets have CL-based rarity scaling (`baseRate * clIncrease^owned`):
+The following BSO pets have CL-based rarity scaling (`baseRate × clIncrease^owned`, i.e., `baseRate × (clIncrease)^{owned}`):
 
 - Doug: base 1/7000, x1.5 per copy
 - Takon: base 1/600, x1.5 per copy (tame base 1/4500)
