--- a/docs/src/content/docs/bso/Monsters/index.mdx
+++ b/docs/src/content/docs/bso/Monsters/index.mdx
@@ -139,7 +139,7 @@ Brackish blade - 1/1,200 - No major uses other than a CL item.
 
 ### Vladimir Drakan
 
-#### Requiremets:
+#### Requirements:
 
 1 silver stake, 1 vial of blood
 
@@ -193,7 +193,7 @@ Brackish blade - 1/1,200 - No major uses other than a CL item.
 
 ### Yeti
 
-#### Requiremets:
+#### Requirements:
 
 Bitfield: Has Unlocked Yeti
 
