--- a/docs/src/content/docs/getting-started/BSO.mdx
+++ b/docs/src/content/docs/getting-started/BSO.mdx
@@ -34,7 +34,7 @@ If you want to make your current account an ironman, your ENTIRE minion profile 
 
 Some items are unique to BSO due to custom bosses, mechanic changes, and drop table changes. These can be extremely useful for everything from PvM to Skilling, and are often very rare drops.
 
-- Mystery Boxes: There are five types of mystery box; **Tradeables, Untradeables, Equippable, Holiday, and Pet**. Each box has a roll for any item in their category that exists or has ever existed. For example, a Tradeables Mystery Box, TMB for short, can roll anything from a raw shrimps to a 3rd age pickaxe. Mystery boxes can be obtained from any activity, and when obtained from a PvM or skilling trip, you loot is doubled. For people who test new features and find bugs prior to release, there may be a special box as a reward, so make sure to `.roles tester` in the support server's #other-bots channel to be pinged when testing is live. The only items which cannot drop from these boxes are certain bso exclusives in order to preserve their rarity.
+- Mystery Boxes: There are five types of mystery box; **Tradeables, Untradeables, Equippable, Holiday, and Pet**. Equippable rolls are pulled from equippable-slot items that are not excluded by the mystery-box blacklist. Each box has a roll for any item in their category that exists or has ever existed. For example, a Tradeables Mystery Box, TMB for short, can roll anything from raw shrimps to a 3rd age pickaxe. Mystery boxes can be obtained from any activity, and when obtained from a PvM or skilling trip, your loot is doubled. For people who test new features and find bugs prior to release, there may be a special box as a reward, so make sure to `.roles tester` in the support server's #other-bots channel to be pinged when testing is live. The only items which cannot drop from these boxes are certain bso exclusives in order to preserve their rarity.
 
 - Dwarven Equipment: Dwarven items are BSO-exclusive boost items. They are either smithed out of dwarven bars (smelted from dwarven ore dropped from dwarven crates) or dropped from the Dwarven King Goldemar. The **Dwarven Greataxe** provides a 2x speed boost to woodcutting and Wintertodt. The **Dwarven Pickaxe** provides a 2x speed boost to mining. The **Dwarven Greathammer** provides a speed 2x boost to smithing and crafting. **Dwarven Gauntlets** provide a 2x speed boost to smelting and a 3x speed boost to cooking. The **Dwarven Warhammer**, which is only dropped from King Goldemar, provides a 40% speed boost to all PvM activities. The **Dwarven Blessing** gives a 20% boost to all PVM activities, at the cost of one prayer potion(4) every 5 minutes. These can be obtained from Grandmaster caskets.
 
