docs: fix Vladimir Drakan monster index link

--- a/docs/src/content/docs/bso/Monsters/index.mdx
+++ b/docs/src/content/docs/bso/Monsters/index.mdx
@@ -10,7 +10,7 @@ title: "Custom Monsters"
 - [Polypore Dungeon](polypore-dungeon)
 - [Rum Pumped Crab](#rum-pumped-crab)
 - [Tormented Demon](#tormented-demon)
-- [Vladimir Drakan](./Demi Bosses/vladimir-drakan)
+- [Vladimir Drakan](/bso/monsters/demi-bosses/vladimir-drakan)
 - [Yeti](#yeti)
 
 ## Custom Monsters
