--- a/docs/src/content/docs/osb/commands.mdx
+++ b/docs/src/content/docs/osb/commands.mdx
@@ -1,5 +1,7 @@
-﻿---
+---
 title: "Commands"
+sidebar:
+  order: 2.1
 ---
 
 import CommandReference from '../../../components/CommandReference.astro';
