Enforce users to complete Learning the Ropes
- Change the tutorial island quest to the correct name
- Block users from using minion commands until they have bought a minion and then completed the Learning the Ropes quest
- Add two new buttons to the minion buy response, one for becoming an ironman, the other for starting the Learning the Ropes quest.
- Add the learning the ropes quest button to the ironman confirmation string.
- On completion of learning the ropes quest, adds a link to the wiki beginner guide for users
- Adds some small relevant tests

This PR has only been tested by myself and I have utilised AI tools to achieve my desired goals with this PR.

--- a/docs/src/content/docs/osb/quests.mdx
+++ b/docs/src/content/docs/osb/quests.mdx
@@ -141,6 +141,14 @@ You can send your minion to do this quest using [[/activities quest name\:Ethica
 
 [[thieving\:6,000]]
 
+## Learning the Ropes
+
+You can send your minion to do this quest using [[/activities quest name\:Learning the Ropes]]
+
+### Item Rewards
+
+[[1351]] [[1265]] [[590]] [[303]] [[315]] [[1205]] [[1277]] [[1171]] [[841]] [[882]] [[556]] [[558]] [[1925]] [[1931]] [[2309]] [[555]] [[557]] [[559]] [[995]]
+
 ## Meat And Greet
 
 You can send your minion to do this quest using [[/activities quest name\:Meat And Greet]]
@@ -314,14 +322,6 @@ You can send your minion to do this quest using [[/activities quest name\:The Ri
 ### XP Rewards
 
 [[woodcutting\:2,000]]
-
-## Tutorial Island
-
-You can send your minion to do this quest using [[/activities quest name\:Tutorial Island]]
-
-### Item Rewards
-
-[[1351]] [[1265]] [[590]] [[303]] [[315]] [[1205]] [[1277]] [[1171]] [[841]] [[882]] [[556]] [[558]] [[1925]] [[1931]] [[2309]] [[555]] [[557]] [[559]] [[995]]
 
 ## Twilight's Promise
 
