--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -2592,6 +2592,49 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Gorak
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Gorak](https://oldschool.runescape.wiki/w/Gorak)
+
+- You can send your minion to kill this monster using: [[/k name\:Gorak]]
+
+- You can check your KC using: [[/minion kc name\:Gorak]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Gorak]]
+
+- You can check your collection log using: [[/cl name\:Gorak]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Gorak]]
+
+</TabItem>
+<TabItem label="Costs">
+    - No Food Needed
+
+</TabItem>
+<TabItem label="Requirements">
+    [[qp\:30]]
+
+[[prayer\:43]] [[crafting\:31]] [[woodcutting\:36]]
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 20% boost for [[Gem bag]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
 ## Greater Demon
 
 <Tabs>
