Ellipsis-dev suggestions

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -2618,6 +2618,10 @@ You can have one of the following boosts:
 
 [[prayer\:43]] [[crafting\:31]] [[woodcutting\:36]]
 
+**Items Required**
+
+- [[Ring of wealth]] or [[Ring of wealth (i)]]
+
 </TabItem>
 <TabItem label="Boosts">
     <details>
